fixed the bug that when inserting a business name is already taken. so now, the app can return proper answer whether a name is taken or not

--- a/Login_Firebase/Base.lproj/Main.storyboard
+++ b/Login_Firebase/Base.lproj/Main.storyboard
@@ -146,10 +146,10 @@
             </objects>
             <point key="canvasLocation" x="-485" y="-465"/>
         </scene>
-        <!--View Controller-->
+        <!--Initial View Controller-->
         <scene sceneID="y5E-8G-xp0">
             <objects>
-                <viewController id="w9d-k4-fKR" sceneMemberID="viewController">
+                <viewController id="w9d-k4-fKR" customClass="InitialViewController" customModule="Login_Firebase" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7eh-tR-gRv"/>
                         <viewControllerLayoutGuide type="bottom" id="pIF-LO-277"/>
